set z-index for contact component, fix the animation for invertedRevealerScroll component

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,6 +1,8 @@
 @use "@/variables" as *;
 
 .contact-section {
+    position: relative;
+    z-index: 10;
     min-height: 24rem;
     width: 100vw;
     padding: 5rem 2.5rem;
